--- a/src/components/ContactMobile/index.scss
+++ b/src/components/ContactMobile/index.scss
@@ -29,6 +29,9 @@
     border-top: 1px solid #6695ca;
     line-height: 18px;
     height: 50px;
+    span {
+      font-size: 18px;
+    }
   }
 }
 
