--- a/src/components/ContentRightMobile/index.scss
+++ b/src/components/ContentRightMobile/index.scss
@@ -92,8 +92,8 @@
       padding: 53px 27px;
       text-align: center;
       border-top: 1px solid #6695ca;
-      .img {
-        width: 95%;
+      img {
+        width: 100%;
       }
     }
   }
