--- a/src/components/CaseStudy/index.scss
+++ b/src/components/CaseStudy/index.scss
@@ -104,6 +104,7 @@
       &:hover {
         background-color: #ffffff;
         transition: all 0.5s ease-out;
+        cursor: url(../../../public/assets/images/mini.pointer.png), auto;
       }
     }
     .item-matchbox {
